tests/externInfo/dhrystone-exported/db/invalid/path/Proc6.c.loc
68.8.0.4055 69.14.0.13371 73.8.0.4105 79.21.0.4201 79.33.0.4209 79.55.0.4219 